[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/PlayerRevealAnimationSimple.gd" id="1"]

[node name="PlayerRevealAnimationSimple" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="ViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 50, -80)
fov = 60.0

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
modulate = Color(1, 1, 1, 0)

[node name="PlayerImage" type="TextureRect" parent="UI/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -180.0
offset_right = 120.0
offset_bottom = 20.0
expand_mode = 1
stretch_mode = 5

[node name="PlayerName" type="Label" parent="UI/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 36
text = "JUGADOR NUEVO"
horizontal_alignment = 1

[node name="PlayerOVR" type="Label" parent="UI/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 32
text = "OVR: 75"
horizontal_alignment = 1

[node name="PlayerPosition" type="Label" parent="UI/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 160.0
offset_right = 150.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 28
text = "DELANTERO"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 300.0
offset_right = 120.0
offset_bottom = 360.0
modulate = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 24
text = "CONTINUAR"
